--- a/schedule/index.html
+++ b/schedule/index.html
@@ -137,9 +137,9 @@
               </a>
             </div>
             <div class="modal-body">
-              Have you selected your plenaries yet? Click continue to go to your
-              personal schedule where you could select your plenary for WAC
-              2021!
+              <h4>Have you selected your plenaries yet?</h4>
+              Click continue to go to your personal schedule where you could
+              select your plenaries for WAC 2021!
             </div>
             <div class="modal-footer">
               <button
