--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -378,7 +378,7 @@
             case 1:
               return {
                 title: "Commercial Spaceflight: Humanity's Next Steps",
-                speaker: "Dr. Louis Friedman",
+                speaker: "Dr. Louis Friedman | Janet Ivey",
               };
               break;
             //Social Media
@@ -392,7 +392,7 @@
             case 4:
               return {
                 title: "Businesses in COVID: Sink or Swim",
-                speaker: "Bharat Masrani | Opher Baron",
+                speaker: "Opher Baron | Bharat Masrani",
               };
               break;
           }
