--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -371,7 +371,7 @@
             case 2:
               return {
                 title: "Social Justice: Our History and Future",
-                speaker: "Ajani Charles | Mehrdad Baghai",
+                speaker: "Mehrdad Baghai | Ajani Charles",
               };
               break;
             //Space
