apply button and ciao typos

--- a/sprint/index.html
+++ b/sprint/index.html
@@ -90,13 +90,15 @@
         <h1 class="display-4">Innovate or Die</h1>
       </div>
       <div class="text-center text-md-right">
-        <h4>The challenge kicks of in</h4>
+        <h4>The challenge kicks off in</h4>
         <h3><span id="countdown"></span></h3>
       </div>
     </div>
   </div>
-    
-
+  <br>
+  <div class="text-center">
+    <a class="btn btn-outline-danger active center" style="padding-left: 2rem; padding-right: 2rem; padding-top: 1rem; padding-bottom: 1rem;" href="https://forms.gle/4B1jLSj2BdrQrnCz6" data-proofer-ignore>Apply!</a>
+  </div>
   <div class="container">
     <div class="card card-body mt-3 mx-3">
       <div class="row">
