--- a/startups/index.html
+++ b/startups/index.html
@@ -213,7 +213,7 @@
           <div class="col-md-12">
             <h2 class="text-center text-md-left">TreesCO2</h2>
             <p>
-                Blurb coming soon...
+              TreesCO2 was co-founded by Canadian twins Kaitlin and Lauren Grierson to inspire the world to plant trees through action and education. TreesCO2 issued its call to action for 1,000 trees for each of the world’s youth aged 15-24 at the 2019 United Nations Youth Climate Action Summit and Nature-Based Solutions Weekend Meetings. TreesCO2’s metric of 1,000 trees for every global youth approximates and personalizes the World Economic Forum’s goal of 1 trillion trees. Having exceeded 4500 trees, TreesCO2 is working with other youth to help them reach their personal goals of 1,000 trees. The Student Ambassador Program (SAP) is a leadership program inviting students to join TreesCO2 in action, education and awareness through tree planting field trips in partnership with local tree planting authorities. Due to COVID-19, this year TreesCO2 pivoted from in-person tree planting to virtual tree planting education and climate action programming.
             </p>
           </div>
 
@@ -223,6 +223,15 @@
             <h2 class="text-center text-md-left">UnWrapIt</h2>
             <p>
               UnWrapIt is a virtual, corporate gifting platform that helps socially and environmentally conscious companies create unique gift experiences. Their gifts are always experiential, digital, or charitable, and since they are delivered virtually don’t require the hassle of shipping and won’t end up in landfills. With UnWrapIt, companies can gift digital media, real-world experiences, gift cards, subscriptions, charitable donations and much more.
+            </p>
+          </div>
+
+          <br>
+
+          <div class="col-md-12">
+            <h2 class="text-center text-md-left">Wavefrnt</h2>
+            <p>
+              Blurb coming soon...
             </p>
           </div>
         </div>
