--- a/keynote/index.html
+++ b/keynote/index.html
@@ -97,9 +97,9 @@
       <p>
         Mehdi Hasan is an award-winning journalist, political commentator, senior contributor at The Intercept, host of the podcast Deconstructed, as well as a presenter for Al Jazeera English. He is known globally for his televised takedowns of world leaders and political proxies. As a British, Muslim immigrant based in Donald Trump's Washington D.C., Mehdi offers a provocative perspective on the ups and downs of global politics and world affairs. At a time when the truth is being denied to the world, in the midst of chaos, moral failure, and when everything seems out of WAC, Mehdi exemplifies tenacity and courage in countering the myths and snowballing used by opponents of transparency, pluralism and democracy. 
       </p> -->
-      <h1 class="text-center">WAC 2021: Keynote Speaker To Be Announced Soon</h1>
+      <h1 class="text-center">WAC 2021: Keynote Speaker(s) To Be Announced Soon</h1>
       <hr>
-      <p class="text-center">The Keynote speaker has not been announced yet, but expect a big name.</p>
+      <p class="text-center">The Keynote is still a mystery, come back soon.</p>
     </div>
   </div>
   <div class="card-deck mt-2">
