updated for sprint

--- a/faq/index.html
+++ b/faq/index.html
@@ -264,9 +264,7 @@
             >
               <div class="card-body">
                 <p>
-                  Yes, each accepted delegate must pay $50 in order to come to
-                  the SPRINT. Special accommodations may however be available if
-                  you contact WAC by email (wac@ucc.on.ca).
+                  No, it is absolutely free!
                 </p>
               </div>
             </div>
@@ -292,8 +290,7 @@
             >
               <div class="card-body">
                 <p>
-                  After completing the type form, we will be sending out
-                  acceptances via email on the 30th of January.
+                  After completing the form associated with the application process, acceptances will be sent out on a later date.
                 </p>
               </div>
             </div>
@@ -312,7 +309,7 @@
                 role="tab"
                 id="heading-whattimesdoalloftheseeventshappen"
               >
-                <h5 class="mb-0">When/Where does all of this take place?</h5>
+                <h5 class="mb-0">Where can I find more information on this?</h5>
               </div>
             </a>
             <div
@@ -323,40 +320,7 @@
             >
               <div class="card-body">
                 <p>
-                  All that information is populated in the SPRINT page, click
-                  the red button in the top right to view it.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <a
-              data-bs-toggle="collapse"
-              data-bs-parent="#accordion-conferenceday"
-              data-bs-target="#collapse-willstudentsbeprovidedlunch"
-              aria-expanded="true"
-              aria-controls="collapse-willstudentsbeprovidedlunch"
-            >
-              <div
-                class="card-header"
-                role="tab"
-                id="heading-willstudentsbeprovidedlunch"
-              >
-                <h5 class="mb-0">Will there be prizes for SPRINT?</h5>
-              </div>
-            </a>
-            <div
-              id="collapse-willstudentsbeprovidedlunch"
-              class="collapse"
-              role="tabpanel"
-              aria-labelledby="heading-willstudentsbeprovidedlunch"
-            >
-              <div class="card-body">
-                <p>Of course!</p>
-                <p>
-                  All the prizes are under the SPRINT tab! If you have any
-                  further questions aboue them feel free to send us an email.
+                  Click the red "SPRINT" button in the navbar!
                 </p>
               </div>
             </div>
