--- a/team/index.html
+++ b/team/index.html
@@ -1069,7 +1069,7 @@
             </div>
           </div>
           <div
-            class="tab-pane fade show active"
+            class="tab-pane fade show"
             id="amb"
             role="tabpanel"
             aria-labelledby="amb-tab"
