update speaker name

--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -125,7 +125,7 @@
         <a class="nav-link" href="../staff/index.html">Staff</a>
       </li>
       -->
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="../schedule/index.html">Schedule</a>
           </li>
           <li class="nav-item">
@@ -369,7 +369,8 @@
         document.getElementById("s1").innerText = "Bharat Masrani";
         document.getElementById("s2").innerText = "Dr. Louis Friedman";
         document.getElementById("s3").innerText = "Ajani Charles";
-        document.getElementById("s4").innerText = "The Social Dilema";
+        document.getElementById("s4").innerText =
+          "The Social Dilemma Producers Panel";
       }
       function setVal(num) {
         function getInfo(val) {
