added fade to alert and moved position

--- a/index.html
+++ b/index.html
@@ -128,17 +128,16 @@
       </div>
     </nav>
 
-    <div class="container" color="red">
-      <div class="alert bg-danger text-center" role="alert">
-        <button type="button" class="close" data-bs-dismiss="alert">
-          &times;
-        </button>
-        <!-- Makes the banner closeable -->
-        Registration is <b>LIVE</b>. Check the button in the navbar!
-      </div>
-    </div>
-
     <div class="index-welcome">
+      <div class="container" color="red">
+        <div class="alert bg-danger text-center fade show" role="alert">
+          <button type="button" class="close" data-bs-dismiss="alert">
+            &times;
+          </button>
+          <!-- Makes the banner closeable -->
+          Registration is <b>LIVE</b>. Check the button in the navbar!
+        </div>
+      </div>
       <div class="container">
         <div class="text-center text-md-left">
           <h2>Welcome to the 2021</h2>
