--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -361,7 +361,7 @@
       if (plenary == 1) {
         document.getElementById("val").innerText = "Select Plenary 1:";
         document.getElementById("s1").innerText = "Janet Ivey";
-        document.getElementById("s2").innerText = "Merhrdad Baghai";
+        document.getElementById("s2").innerText = "Mehrdad Baghai";
         document.getElementById("s3").innerText = "David Caroll";
         document.getElementById("s4").innerText = "Opher Baron";
       } else {
