--- a/reg/plenary.html
+++ b/reg/plenary.html
@@ -231,7 +231,7 @@
                       >Commercial Spaceflight: Humanity's Next Steps</a
                     >
                   </td>
-                  <td id="s1">Dr. Louis Friedman</td>
+                  <td id="s1"></td>
                   <td>
                     <a
                       data-bs-toggle="modal"
@@ -249,7 +249,7 @@
                       >Social Justice: Our History and Future</a
                     >
                   </td>
-                  <td id="s2">Ajani Charles | Mehrdad Baghai</td>
+                  <td id="s2"></td>
                   <td>
                     <a
                       data-bs-toggle="modal"
@@ -267,7 +267,7 @@
                       >Social Media: We are the Product</a
                     >
                   </td>
-                  <td id="s3">David Carroll | the Social Dilemma Film crew</td>
+                  <td id="s3"></td>
                   <td>
                     <a
                       data-bs-toggle="modal"
@@ -285,7 +285,7 @@
                       >Businesses in COVID: Sink or Swim</a
                     >
                   </td>
-                  <td id="s4">Bharat Masrani | Opher Baron</td>
+                  <td id="s4"></td>
                   <td>
                     <a
                       data-bs-toggle="modal"
@@ -362,7 +362,7 @@
         document.getElementById("val").innerText = "Select Plenary 1:";
         document.getElementById("s1").innerText = "Janet Ivey";
         document.getElementById("s2").innerText = "Mehrdad Baghai";
-        document.getElementById("s3").innerText = "David Caroll";
+        document.getElementById("s3").innerText = "David Carroll";
         document.getElementById("s4").innerText = "Opher Baron";
       } else {
         document.getElementById("val").innerText = "Select Plenary 2:";
