vertical center modal for plenary selection

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -124,7 +124,7 @@
         aria-labelledby="alertModalLabel"
         aria-hidden="true"
       >
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="alertModalLabel">Select Plenaries</h5>
