--- a/reg/success.html
+++ b/reg/success.html
@@ -144,7 +144,9 @@
           <div class="row">
             <div class="col-sm-8 text-center">
               <h3>Select your plenaries and check your personal schedule</h3>
-              <a class="btn btn-primary text-white">WAC2021 Links Hub</a>
+              <a class="btn btn-primary text-white" href="./linkhub.html"
+                >WAC2021 Links Hub</a
+              >
             </div>
             <span class="col fa fa-calendar fa-7x text-primary"></span>
           </div>
