--- a/sprint/index.html
+++ b/sprint/index.html
@@ -155,21 +155,21 @@
       <div class="row">
         <div class="col-sm-6">
             <p><i><b>
-              Getting into the Entrepreneurial Mindset
+              1. Getting into the Entrepreneurial Mindset
               <br>
-              Designing and Prototyping a Product/Solution
+              2. Designing and Prototyping a Product/Solution
               <br>
-              Target Market, Types of Marketing, Developing a Brand
+              3. Target Market, Types of Marketing, Developing a Brand
               <br>
-              Social Media Marketing
+              4. Social Media Marketing
               <br>
-              Financing Your Startup
+              5. Financing Your Startup
               <br>
-              Types of Investors and How to Attract Them
+              6. Types of Investors and How to Attract Them
               <br>
-              Creating an Effective Pitch
+              7. Creating an Effective Pitch
               <br>
-              Demo Day
+              8. Demo Day
             </b></i></p>
         </div>
         <div class="col-sm-6">
